fix side scroll on mobile

--- a/blocks/poll/poll.css
+++ b/blocks/poll/poll.css
@@ -1,5 +1,5 @@
 main .poll-wrapper .poll {
-  width: 800px;
+  overflow-x: hidden !important;
 }
 
 main .poll-wrapper .poll form > div {
